
=== Configuration changes for system administrators in 1.44 ===

* (T382987) The default value of 'http.dnsbl.sorbs.net.' in $wgDnsBlacklistUrls
  has been removed. This is because sorbs.net have stopped providing their
  services. This means that if you have $wgEnableDnsBlacklist set to true, it
  will no longer provide any value unless you add other servers to
  $wgDnsBlacklistUrls.
* …

==== New configuration ====

* (T377829) $wgAutopromoteOnceRCExcludedGroups - Defaults to an empty list, can
  be used to define a denylist of user group names. One-shot autopromotions
  into these groups will never result in an RC entry, even if
  $wgAutopromoteOnceLogInRC is true, as long as they were the only new groups
  the user was autopromoted into.
* …

==== Changed configuration ====

* (T13555) $wgParserEnableLegacyHeadingDOM now defaults to `false`.
  You can set it to `true` to temporarily restore the legacy HTML markup
  for wikitext headings in the output from the Parser, in case you find
  that your wiki's content or an extension is incompatible with the new markup.
  More information: https://www.mediawiki.org/wiki/Heading_HTML_changes
  This option will be removed in a future release.
* (T382987) $wgDnsBlacklistUrls now defaults to an empty array. See the comment
  in the "Configuration changes for system administrators" section above.

==== Removed configuration ====

* wgResourceLoaderUseObjectCacheForDeps, deprecated in 1.43, has been removed.
  It is now always enabled (T343492).
* wgBaseDirectory, unused, has been removed in favour of MW_INSTALL_PATH.
  If a variable value is needed, inject an optional parameter instead.
* …

=== New user-facing features in 1.44 ===

* (T363538, T204792) New parser functions {{#interlanguagelink:prefix|title}}
  and {{#interwikilink:prefix|title|caption}} to unambiguously create
  interlanguage and interwiki links, respectively, even when the "prefix"
  might conflict with a namespace on the local wiki.